# pym2612

./: README.md  main.py  pyproject.toml
spec/: dmpspec.py
