[tool.poetry]
name = "pym2612"
version = "0.1.0"
description = "\"Convert YM2612 patches of one format to another\""
authors = ["Mike Robinson <michael_robinson@live.ca>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
